fixed button overflowing

--- a/packages/scandipwa/src/component/CheckoutSuccess/CheckoutSuccess.style.scss
+++ b/packages/scandipwa/src/component/CheckoutSuccess/CheckoutSuccess.style.scss
@@ -15,9 +15,12 @@
     }
 
     &-ButtonWrapper {
+        z-index: 1;
+        background-color: var(--color-white);
+
         @include mobile {
             padding: 14px;
-            position: absolute;
+            position: fixed;
             inset-inline-start: 0;
             width: 100%;
             inset-block-end: var(--navigation-tabs-height);
